# MyBro

./: .env.example  AGENTS.md  DEVLOG.md  README.md  ROADMAP.md  deploy.sh  index.html  metadata.json  package-lock.json  package.json  server.ts  tsconfig.json  tsconfig.server.json  vite.config.ts
public/: vad-processor.js
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  gradle.properties  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: lib.rs  main.rs  models.rs
src/components/: MessageList.tsx  StartupScreen.tsx
src/config/: models.ts
src/hooks/: useMessages.ts
src/lib/: ai.ts  id.ts
src/services/: audioCaptureService.ts  automationTools.ts  cloudLLMService.ts  diagnosticsService.ts  documentService.ts  geminiLiveService.ts  geminiService.ts  speechT5Service.ts  vectorDbService.ts  voiceService.ts  voiceSwitchService.ts  webLLMService.ts
src/workers/: webllm.worker.ts
supabase/: config.toml
supabase/functions/gemini-live/: index.ts
